exports[`test ConsoleReporter.activity 1`] = `
Object {
  "stderr": "[1G⠁ [0K[2K[1G",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.command 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[90m$ foobar[39m",
}
`;

exports[`test ConsoleReporter.error 1`] = `
Object {
  "stderr": "[2K[1G[31merror[39m foobar",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.footer 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G✨  Done in 0.00s.",
}
`;

exports[`test ConsoleReporter.footer 2`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G✨  Done in 0.00s. Peak memory usage 0.00MB.",
}
`;

exports[`test ConsoleReporter.header 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[1myarn foobar v0.0.0[22m",
}
`;

exports[`test ConsoleReporter.info 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[34minfo[39m foobar",
}
`;

exports[`test ConsoleReporter.log 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1Gfoobar",
}
`;

exports[`test ConsoleReporter.progress 1`] = `
Object {
  "stderr": "[2K[1G[1G░░ 0/2[1G█░ 1/2[2K[1G",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.progress 2`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.progress 3`] = `
Object {
  "stderr": "",
  "stdout": "",
}
`;

exports[`test ConsoleReporter.select 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[34minfo[39m Ayo?
[2K[1G  [2m1)[22m foo
[2K[1G  [2m2)[22m bar
[1G[0JSelect one: [13G1",
}
`;

exports[`test ConsoleReporter.step 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[90m[1/5][39m foboar...",
}
`;

exports[`test ConsoleReporter.success 1`] = `
Object {
  "stderr": "",
  "stdout": "[2K[1G[32msuccess[39m foobar",
}
`;

exports[`test ConsoleReporter.warn 1`] = `
Object {
  "stderr": "[2K[1G[33mwarning[39m foobar",
  "stdout": "",
}
`;

exports[`test ProgressBar 1`] = `"[2K[1G[1G░░ 0/2"`;

exports[`test ProgressBar 2`] = `"[2K[1G[1G░░ 0/2[1G█░ 1/2"`;

exports[`test ProgressBar 3`] = `"[2K[1G[1G░░ 0/2[1G█░ 1/2[2K[1G[1G██ 2/2"`;

exports[`test Spinner 1`] = `"[1G⠁ [0K"`;

exports[`test Spinner 2`] = `"[1G⠁ [0K[1G⠂ foo[0K"`;

exports[`test Spinner 3`] = `"[1G⠁ [0K[1G⠂ foo[0K[1G⠄ bar[0K"`;

exports[`test Spinner 4`] = `"[1G⠁ [0K[1G⠂ foo[0K[1G⠄ bar[0K[2K[1G"`;
